[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Entry.gd" type="Script" id=1]

[node name="Entry" type="HBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 35 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButton" type="Button" parent="."]
margin_right = 161.0
margin_bottom = 35.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveButton" type="Button" parent="."]
margin_left = 165.0
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
focus_mode = 0
enabled_focus_mode = 0
text = "X"
[connection signal="pressed" from="TextButton" to="." method="_on_TextButton_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
